changes to the readme file, code and names of the csv files

--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,198 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 103,
    "id": "9fb8fe66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "caracteristiques-2019.csv\n",
-      "        Num_Acc  jour  mois    an   hrmn  lum dep    com  agg  int  atm  col  \\\n",
-      "0  201900000001    30    11  2019  01:30    4  93  93053    1    1    1    2   \n",
-      "1  201900000002    30    11  2019  02:50    3  93  93066    1    1    1    6   \n",
-      "2  201900000003    28    11  2019  15:15    1  92  92036    1    1    1    4   \n",
-      "3  201900000004    30    11  2019  20:20    5  94  94069    1    1    1    4   \n",
-      "4  201900000005    30    11  2019  04:00    3  94  94028    1    1    1    2   \n",
-      "\n",
-      "             adr         lat       long  \n",
-      "0   AUTOROUTE A3  48,8962100  2,4701200  \n",
-      "1   AUTOROUTE A1  48,9307000  2,3688000  \n",
-      "2  AUTOROUTE A86  48,9358718  2,3191744  \n",
-      "3             A4  48,8173295  2,4281502  \n",
-      "4        A86 INT  48,7763620  2,4332540  \n",
-      "lieux-2019.csv\n",
-      "        Num_Acc  catr voie   v1   v2  circ  nbv  vosp  prof  pr  pr1  plan  \\\n",
-      "0  201900000001     1    3  0.0  NaN     3   10     0     1   6  900     2   \n",
-      "1  201900000002     1    1  0.0  NaN     1    2     0     4   3  845     2   \n",
-      "2  201900000003     1   86  0.0  NaN     3    8     0     1  10  500     3   \n",
-      "3  201900000004     1    4  0.0  NaN     3    5     0     1   2  299     1   \n",
-      "4  201900000005     1  86   0.0  INT     1    3     0     1  41    0     3   \n",
-      "\n",
-      "   lartpc  larrout  surf  infra  situ  vma  \n",
-      "0     NaN      NaN     1      2     1   70  \n",
-      "1     NaN      NaN     1      0     1   70  \n",
-      "2     NaN      NaN     1      0     1   90  \n",
-      "3     NaN      NaN     1      0     1   90  \n",
-      "4     NaN      NaN     1      2     1   90  \n",
-      "usagers-2019.csv\n",
-      "        Num_Acc  id_vehicule num_veh  place  catu  grav  sexe  an_nais  \\\n",
-      "0  201900000001  138 306 524     B01      2     2     4     2     2002   \n",
-      "1  201900000001  138 306 524     B01      1     1     4     2     1993   \n",
-      "2  201900000001  138 306 525     A01      1     1     1     1     1959   \n",
-      "3  201900000002  138 306 523     A01      1     1     4     2     1994   \n",
-      "4  201900000003  138 306 520     A01      1     1     1     1     1996   \n",
-      "\n",
-      "   trajet  secu1  secu2  secu3  locp actp  etatp  \n",
-      "0       0      1      0     -1    -1   -1     -1  \n",
-      "1       5      1      0     -1    -1   -1     -1  \n",
-      "2       0      1      0     -1    -1   -1     -1  \n",
-      "3       0      1      0     -1    -1   -1     -1  \n",
-      "4       0      1      0     -1    -1    0     -1  \n",
-      "vehicules-2019.csv\n",
-      "        Num_Acc  id_vehicule num_veh  senc  catv  obs  obsm  choc  manv  \\\n",
-      "0  201900000001  138 306 524     B01     2     7    0     2     5    23   \n",
-      "1  201900000001  138 306 525     A01     2    17    1     0     3    11   \n",
-      "2  201900000002  138 306 523     A01     1     7    4     0     1     0   \n",
-      "3  201900000003  138 306 520     A01     1     7    0     2     1     2   \n",
-      "4  201900000003  138 306 521     B01     1     7    1     0     4     2   \n",
-      "\n",
-      "   motor  occutc  \n",
-      "0      1     NaN  \n",
-      "1      1     NaN  \n",
-      "2      1     NaN  \n",
-      "3      1     NaN  \n",
-      "4      1     NaN  \n",
-      "caracteristiques-2020.csv\n",
-      "        Num_Acc  jour  mois    an   hrmn  lum dep    com  agg  int  atm  col  \\\n",
-      "0  202000000001     7     3  2020  16:55    1  91  91657    2    3    1    3   \n",
-      "1  202000000002     7     3  2020  08:35    2  91  91657    2    9    7    6   \n",
-      "2  202000000003     7     3  2020  13:30    1  91  91174    2    2    1    3   \n",
-      "3  202000000004     7     3  2020  18:50    5  91  91215    2    1    1    6   \n",
-      "4  202000000005     7     3  2020  11:00    1  77  77181    1    6    1    2   \n",
-      "\n",
-      "                       adr         lat       long  \n",
-      "0  HENRI BARBUSSE (AVENUE)  48,7053500  2,4384100  \n",
-      "1        MOUSSEAUX(CHEMIN)  48,6900000  2,4100000  \n",
-      "2           CARNOT(AVENUE)  48,6106700  2,4758200  \n",
-      "3     VICTOR HUGO (AVENUE)  48,6978200  2,5244600  \n",
-      "4  LAGNY  (RUE DE  ) - D35  48,8286457  2,7059707  \n",
-      "lieux-2020.csv\n",
-      "        Num_Acc  catr                     voie  v1   v2  circ  nbv  vosp  \\\n",
-      "0  202000000001     4  HENRI BARBUSSE (AVENUE)   0  NaN     2    2     0   \n",
-      "1  202000000002     4        MOUSSEAUX(CHEMIN)   0  NaN     2    2     0   \n",
-      "2  202000000003     4           CARNOT(AVENUE)   0  NaN    -1    2     0   \n",
-      "3  202000000004     4     VICTOR HUGO (AVENUE)   0  NaN     2    2     0   \n",
-      "4  202000000005     3                       35   0  NaN     1    1     0   \n",
-      "\n",
-      "   prof pr  pr1  plan lartpc larrout  surf  infra  situ  vma  \n",
-      "0     1  0    0     1    NaN      -1     1      0     1   50  \n",
-      "1     1  0  100     3    NaN      -1     1      0     1   50  \n",
-      "2     1  0    0     1    NaN      -1     1      0     1   50  \n",
-      "3     1  1    0     1    NaN      -1     1      0     1   30  \n",
-      "4     1  4  674     2    NaN      -1     1      3     8   50  \n",
-      "usagers-2020.csv\n",
-      "        Num_Acc  id_vehicule num_veh  place  catu  grav  sexe  an_nais  \\\n",
-      "0  202000000001  154 742 274     B01      1     1     1     1     1983   \n",
-      "1  202000000001  154 742 275     A01      1     1     3     1     1982   \n",
-      "2  202000000002  154 742 273     A01      1     1     1     1     1997   \n",
-      "3  202000000002  154 742 273     A01     10     3     4     1     1967   \n",
-      "4  202000000003  154 742 271     B01      1     1     1     1     1985   \n",
-      "\n",
-      "   trajet  secu1  secu2  secu3  locp actp  etatp  \n",
-      "0       5      1      0     -1    -1   -1     -1  \n",
-      "1       5      2      6     -1    -1   -1     -1  \n",
-      "2       1      8      0     -1    -1   -1     -1  \n",
-      "3       5      0     -1     -1     3    3      1  \n",
-      "4       0      1      0     -1    -1   -1     -1  \n",
-      "vehicules-2020.csv\n",
-      "        Num_Acc  id_vehicule num_veh  senc  catv  obs  obsm  choc  manv  \\\n",
-      "0  202000000001  154 742 274     B01     1     7    0     2     2    15   \n",
-      "1  202000000001  154 742 275     A01     1    33    0     2     1     2   \n",
-      "2  202000000002  154 742 273     A01     3     7    0     1     2    26   \n",
-      "3  202000000003  154 742 271     B01     1     7    0     2     1     1   \n",
-      "4  202000000003  154 742 272     A01     1     7    0     2     8     1   \n",
-      "\n",
-      "   motor  occutc  \n",
-      "0      1     NaN  \n",
-      "1      1     NaN  \n",
-      "2      1     NaN  \n",
-      "3      1     NaN  \n",
-      "4      0     NaN  \n",
-      "carcteristiques-2021.csv\n",
-      "        Num_Acc  jour  mois    an   hrmn  lum dep    com  agg  int  atm  col  \\\n",
-      "0  202100000001    30    11  2021  07:32    2  30  30319    1    1    1    1   \n",
-      "1  202100000002    25     9  2021  14:20    1  51  51544    1    3    1    3   \n",
-      "2  202100000003    15     7  2021  07:55    1  85  85048    2    1    7    6   \n",
-      "3  202100000004    27     3  2021  19:45    5  93  93005    2    2    3    6   \n",
-      "4  202100000005    25     2  2021  07:20    5  76  76429    2    1    1    2   \n",
-      "\n",
-      "                                                adr            lat  \\\n",
-      "0                                            CD 981  44,0389580000   \n",
-      "1  Aire de repos croisement D20E9 après sortie D977  49,2421290000   \n",
-      "2                           15 rue François Nicolas  46,9219500000   \n",
-      "3                                    Route de Mitry  48,9493634583   \n",
-      "4                                   PARIS. ROUTE DE  49,4083800000   \n",
-      "\n",
-      "             long  \n",
-      "0    4,3480220000  \n",
-      "1    4,5545460000  \n",
-      "2   -0,9644600000  \n",
-      "3    2,5196639908  \n",
-      "4    1,1458100000  \n",
-      "lieux-2021.csv\n",
-      "        Num_Acc  catr                             voie  v1   v2  circ  nbv  \\\n",
-      "0  202100000001     3                              981  -1  NaN     2    2   \n",
-      "1  202100000002     3                               20   0    E     2    2   \n",
-      "2  202100000003     4  GENERAL GALLIENI (BOULEVARD DU)   0  NaN     2    2   \n",
-      "3  202100000004     3  GENERAL GALLIENI (BOULEVARD DU)   0  NaN     2    4   \n",
-      "4  202100000005     7                  PARIS. ROUTE DE  -1  NaN     2    2   \n",
-      "\n",
-      "   vosp  prof   pr  pr1  plan lartpc larrout  surf  infra  situ  vma  \n",
-      "0     0     1  (1)  (1)     1    NaN      -1     1      0     1   80  \n",
-      "1     0     1    0   10     1    NaN      -1     1      0     1   80  \n",
-      "2     0     1  (1)  (1)     1    NaN      -1     1      0     1   50  \n",
-      "3     0     1    0    1     1    NaN      -1     1      0     1   50  \n",
-      "4    -1     1   11  150     1    NaN      -1     1      0     1   50  \n",
-      "usagers-2021.csv\n",
-      "        Num_Acc id_vehicule num_veh  place  catu  grav  sexe  an_nais  trajet  \\\n",
-      "0  202100000001     201 764     B01      1     1     3     1   2000.0       1   \n",
-      "1  202100000001     201 765     A01      1     1     1     1   1978.0       1   \n",
-      "2  202100000002     201 762     A01      1     1     4     1   1983.0       0   \n",
-      "3  202100000002     201 763     B01      1     1     3     1   1993.0       0   \n",
-      "4  202100000003     201 761     A01      1     1     1     1   1995.0       1   \n",
-      "\n",
-      "   secu1  secu2  secu3  locp actp  etatp  \n",
-      "0      0      9     -1     0    0     -1  \n",
-      "1      1     -1     -1     0    0     -1  \n",
-      "2      1     -1     -1     0    0     -1  \n",
-      "3      1     -1     -1     0    0     -1  \n",
-      "4      1      0     -1     0    0     -1  \n",
-      "vehicules-2021.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Num_Acc id_vehicule num_veh  senc  catv  obs  obsm  choc  manv  motor  \\\n",
-      "0  202100000001     201 764     B01     1     1    0     2     1     1      5   \n",
-      "1  202100000001     201 765     A01     1     7    0     9     3    17      1   \n",
-      "2  202100000002     201 762     A01     0     7    2     2     1     1      0   \n",
-      "3  202100000002     201 763     B01     0     7    0     2     1     9      0   \n",
-      "4  202100000003     201 761     A01     1     7    0     1     3     1      1   \n",
-      "\n",
-      "   occutc  \n",
-      "0     NaN  \n",
-      "1     NaN  \n",
-      "2     NaN  \n",
-      "3     NaN  \n",
-      "4     NaN  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -201,43 +13,43 @@
     "# Set the base directory\n",
     "base_dir = './Data/'\n",
     "\n",
-    "dfAccidents = []\n",
+    "Accidents = []\n",
     "\n",
     "# Loop over the directories\n",
     "for year in ['2019', '2020', '2021']:\n",
     "    # Set the current directory\n",
     "    current_dir = base_dir + year + '/'\n",
     "\n",
+    "\n",
     "    # Loop over the files in the current directory\n",
     "    for file in os.listdir(current_dir):\n",
-    "        dfcaracteristiques = pd.read_csv(\"carcteristiques-\" + year, sep=\";\")\n",
-    "        dflieux = pd.read_csv(\"lieux-\" + year, sep=\";\")\n",
-    "        dfusagers = pd.read_csv(\"usagers-\" + year, sep=\";\")\n",
-    "        dfvehicles = pd.read_csv(\"vehicles-\" + year, sep=\";\")\n",
-    "        \n",
+    "        dfusagers = pd.read_csv(current_dir + \"usagers-\" + year + \".csv\", sep=\";\")\n",
+    "        dfcaracteristiques = pd.read_csv(current_dir + \"caracteristiques-\" + year + \".csv\", sep=\";\")\n",
+    "        dflieux = pd.read_csv(current_dir + \"lieux-\" + year + \".csv\", sep=\";\")\n",
+    "        dfvehicles = pd.read_csv(current_dir + \"vehicules-\" + year + \".csv\", sep=\";\")\n",
+    "       \n",
+    "\n",
+    "\n",
     "        #join data frames for a given year\n",
-    "        #append the join data frame to dfAccidents\n",
-    "        \n",
-    "        \n",
-    "        # Skip any non-CSV files\n",
-    "        if not file.endswith('.csv'):\n",
-    "            continue\n",
+    "        result = pd.merge(dfusagers, dfcaracteristiques, on='Num_Acc')\n",
+    "        result = pd.merge(result, dflieux, on='Num_Acc')\n",
+    "        result = pd.merge(result, dfvehicles,  on=['Num_Acc','id_vehicule'])\n",
+    "    \n",
+    "        Accidents.append(result)\n",
     "\n",
-    "        # Read the current file into a DataFrame\n",
-    "        print(file)\n",
-    "        df = pd.read_csv(current_dir + file, sep=\";\")\n",
-    "\n",
-    "        # Do something with the DataFrame\n",
-    "        print(df.head())"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "5d55363b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dfAccidents = pd.concat([Accidents[0], Accidents[1]])\n",
+    "dfAccidents = pd.concat([dfAccidents, Accidents[2]])\n"
+   ]
   }
  ],
  "metadata": {
